--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-spring.application.name=CNWEB_NHOM5
+
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/laptopshop
-# data base lien ket xong run code se tu tao
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/flowershop
 spring.datasource.username=root
-spring.datasource.password=
-# ghi thong tin tk vo 
+spring.datasource.password= 150712
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
