--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,11 @@
             <version>4.0.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
